--- a/Tracker/Localizable/ru.lproj/Localizable.strings
+++ b/Tracker/Localizable/ru.lproj/Localizable.strings
@@ -6,6 +6,26 @@
   
 */
 
+"Закрепить" = "Закрепить";
+"Редактировать" = "Редактировать";
+"Удалить" = "Удалить";
+"Анализировать пока нечего" = "Анализировать пока нечего";
+"Лучший период" = "Лучший период";
+"Идеальные дни" = "Идеальные дни";
+"Трекеров завершено" = "Трекеров завершено";
+"Среднее значение" = "Среднее значение";
+"Вот это технологии!" = "Вот это технологии!";
+"Отслеживайте только\n то, что хотите" = "Отслеживайте только\n то, что хотите";
+"Даже если это\n не литры воды и йога" = "Даже если это\n не литры воды и йога";
+"Сохранить" = "Сохранить";
+"Редактирование привычки" = "Редактирование привычки";
+"Закрепленные" = "Закрепленные";
+"Ничего не найдено" = "Ничего не найдено";
+"Все трекеры" = "Все трекеры";
+"Трекеры на сегодня" = "Трекеры на сегодня";
+"Завершенные" = "Завершенные";
+"Не завершенные" = "Не завершенные";
+"Фильтры" = "Фильтры";
 "Трекеры" = "Трекеры";
 "Статистика" = "Статистика";
 "Что будем отслеживать?" = "Что будем отслеживать?";
