refactor: общий рефакторинг проекта

--- a/Tracker/Localizable/ru.lproj/Localizable.strings
+++ b/Tracker/Localizable/ru.lproj/Localizable.strings
@@ -58,8 +58,7 @@
 "Создать" = "Создать";
 "Каждый день" = "Каждый день";
 "Цвет" = "Цвет";
-"Привычки и события можно" = "Привычки и события можно";
-" объединить по смыслу" = " объединить по смыслу";
+"Привычки и события можно\n объединить по смыслу" = "Привычки и события можно\n объединить по смыслу";
 "Добавить категорию" = "Добавить категорию";
 "Новая категория" = "Новая категория";
 "Введите название категории" = "Введите название категории";
