--- a/Tracker/Localizable/en.lproj/Localizable.strings
+++ b/Tracker/Localizable/en.lproj/Localizable.strings
@@ -60,7 +60,7 @@
 "Создать" = "Create";
 "Каждый день" = "Everyday";
 "Цвет" = "Color";
-"Привычки и события можно\#n объединить по смыслу" = "Habits and events\#n can be combined by meaning";
+"Привычки и события можно\n объединить по смыслу" = "Habits and events\n can be combined by meaning";
 "Добавить категорию" = "Add category";
 "Новая категория" = "New category";
 "Введите название категории" = "Enter category name";
