feat: добавить возможность закрепления/открепления привычек на главном экране

--- a/Tracker/Localizable/en.lproj/Localizable.strings
+++ b/Tracker/Localizable/en.lproj/Localizable.strings
@@ -6,7 +6,8 @@
   
 */
 
-"Закрепить" = "Pin";
+"Открепить" = "Открепить";
+"Закрепить" = "UnPin";
 "Редактировать" = "Edit";
 "Удалить" = "Delete";
 "Статистика" = "Statistics";
