refactor: общий рефакторинг

--- a/Tracker/Localizable/en.lproj/Localizable.strings
+++ b/Tracker/Localizable/en.lproj/Localizable.strings
@@ -6,8 +6,8 @@
   
 */
 
-"Открепить" = "Открепить";
-"Закрепить" = "UnPin";
+"Открепить" = "UnPin";
+"Закрепить" = "Pin";
 "Редактировать" = "Edit";
 "Удалить" = "Delete";
 "Статистика" = "Statistics";
